<resources>
    <string name="app_name">SendbirdUIKitSample</string>
    <string name="text_title_login_activity">Sendbird UIKit Sample</string>

    <string name="text_version_info">UI Kit v%1$s &#160;&#160;&#160;&#160; SDK v%2$s</string>
    <string name="text_theme_light">Light theme</string>
    <string name="text_theme_dark">Dark theme</string>
    <string name="text_hint_user_id">User ID</string>
    <string name="text_hint_nickname">Nickname</string>
    <string name="text_sign_in">SIGN IN</string>
    <string name="text_sign_out">SIGN OUT</string>
    <string name="text_splash_title">SENDBIRD</string>
    <string name="text_start_chat">START CHAT</string>

    <string name="text_settings_header_title">My settings</string>
    <string name="text_settings_header_edit_button">Edit</string>
    <string name="text_settings_user_id_badge">User ID</string>
    <string name="text_settings_theme_title">Dark theme</string>
    <string name="text_settings_disturb_title">Do not disturb</string>
    <string name="text_settings_home_title">Exit to home</string>
    <string name="text_settings_change_user_nickname">Change nickname</string>
    <string name="text_settings_change_user_nickname_hint">Enter nickname</string>
    <string name="text_settings_change_user_profile_image">Change profile image</string>

    <string name="text_tab_channels">Channels</string>
    <string name="text_tab_settings">My settings</string>
    <string name="text_tab_badge_max_count">99+</string>

    <string name="text_home">Home</string>
    <string name="text_group_channel">Group channel</string>
    <string name="text_open_channel">Open channel</string>
    <string name="text_group_channel_description">1 on 1, Group chat with members</string>
    <string name="text_open_channel_description">Live streams, Open community chat</string>
    <string name="text_create_community">Create community</string>
    <string name="text_live_streams">Live streams</string>
    <string name="text_community">Community</string>
    <string name="text_live_streaming_description">Preset channels developed by UIKit</string>
    <string name="text_header_create_button">Create</string>
    <string name="text_input_channel_name_hint">Enter channel name</string>
    <string name="text_remove_photo">Remove photo</string>
    <string name="text_live">LIVE</string>
    <string name="text_participants">%s participants</string>
    <string name="text_error_connection_must_be_made">Connection must be made.</string>
    <string name="text_error_update_user_information">Couldn\&#39;t update user information.</string>
    <string name="text_error_update_do_not_disturb">Couldn\&#39;t update disturb setting.</string>
</resources>
