<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/sb_size_24"
            android:background="@color/background_200">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sb_size_24"
                android:layout_marginRight="@dimen/sb_size_24"
                android:textSize="@dimen/sb_text_size_24"
                android:textStyle="bold"
                android:textColor="@color/onlight_01"
                android:fontFamily="sans-serif"
                android:text="@string/text_title_login_activity"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sb_size_24"
                android:layout_marginRight="@dimen/sb_size_24"
                android:text="@string/text_home"
                android:textSize="@dimen/sb_text_size_24"
                android:textColor="@color/onlight_01"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="@dimen/sb_size_24"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/groupChannelButton"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="-10dp"
                android:layout_marginLeft="@dimen/sb_size_8"
                android:layout_marginRight="@dimen/sb_size_8"
                android:background="@drawable/selector_home_channel_type_button">

                <TextView
                    android:id="@+id/tvGroupChannelTitle"
                    android:layout_width="@dimen/sb_size_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sb_size_24"
                    android:layout_marginLeft="@dimen/sb_size_24"
                    android:layout_marginRight="@dimen/sb_size_24"
                    android:text="@string/text_group_channel"
                    android:textSize="@dimen/sb_text_size_20"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/onlight_01"
                    android:lineSpacingExtra="@dimen/sb_text_size_4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/tvGroupChannelDesc"
                    android:layout_width="@dimen/sb_size_0"
                    android:layout_height="@dimen/sb_size_0"
                    android:layout_marginTop="@dimen/sb_size_8"
                    android:layout_marginLeft="@dimen/sb_size_24"
                    android:layout_marginRight="@dimen/sb_size_24"
                    android:textSize="@dimen/sb_text_size_14"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@color/onlight_02"
                    android:letterSpacing="-0.01"
                    android:lineSpacingExtra="@dimen/sb_text_size_2"
                    android:text="@string/text_group_channel_description"
                    app:layout_constraintTop_toBottomOf="@id/tvGroupChannelTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivGroupChannelImage"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:id="@+id/ivGroupChannelImage"
                    android:layout_width="@dimen/sb_size_78"
                    android:layout_height="@dimen/sb_size_56"
                    android:layout_marginEnd="@dimen/sb_size_24"
                    android:layout_marginRight="@dimen/sb_size_24"
                    android:layout_marginBottom="@dimen/sb_size_24"
                    android:src="@drawable/img_groupchannel"
                    app:layout_constraintStart_toEndOf="@id/tvGroupChannelDesc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/openChannelButton"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="-12dp"
                android:layout_marginLeft="@dimen/sb_size_8"
                android:layout_marginRight="@dimen/sb_size_8"
                android:layout_marginBottom="@dimen/sb_size_20"
                android:background="@drawable/selector_home_channel_type_button">

                <TextView
                    android:id="@+id/tvOpenChannelTitle"
                    android:layout_width="@dimen/sb_size_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sb_size_24"
                    android:layout_marginLeft="@dimen/sb_size_24"
                    android:layout_marginRight="@dimen/sb_size_24"
                    android:text="@string/text_open_channel"
                    android:textSize="@dimen/sb_text_size_20"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/onlight_01"
                    android:lineSpacingExtra="@dimen/sb_text_size_4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/tvOpenChannelDesc"
                    android:layout_width="@dimen/sb_size_0"
                    android:layout_height="@dimen/sb_size_0"
                    android:layout_marginTop="@dimen/sb_size_8"
                    android:layout_marginLeft="@dimen/sb_size_24"
                    android:layout_marginRight="@dimen/sb_size_24"
                    android:textSize="@dimen/sb_text_size_14"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@color/onlight_02"
                    android:letterSpacing="-0.01"
                    android:lineSpacingExtra="@dimen/sb_text_size_2"
                    android:text="@string/text_open_channel_description"
                    app:layout_constraintTop_toBottomOf="@id/tvOpenChannelTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivOpenChannelImage"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:id="@+id/ivOpenChannelImage"
                    android:layout_width="@dimen/sb_size_78"
                    android:layout_height="@dimen/sb_size_56"
                    android:layout_marginEnd="@dimen/sb_size_24"
                    android:layout_marginRight="@dimen/sb_size_24"
                    android:layout_marginBottom="@dimen/sb_size_24"
                    android:src="@drawable/img_openchannel"
                    app:layout_constraintStart_toEndOf="@id/tvOpenChannelDesc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSignOut"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sb_size_48"
                android:layout_marginLeft="@dimen/sb_size_24"
                android:layout_marginRight="@dimen/sb_size_24"
                android:textSize="@dimen/sb_text_size_14"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/onlight_01"
                android:lineSpacingExtra="@dimen/sb_size_2"
                android:background="@drawable/selector_home_signout_button"
                android:text="@string/text_sign_out" />

            <TextView
                android:id="@+id/tvVersionInfo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center|bottom"
                android:textSize="@dimen/sb_text_size_12"
                android:layout_marginTop="@dimen/sb_size_40"
                android:layout_marginBottom="@dimen/sb_size_10"
                android:textColor="@color/onlight_02"
                android:layout_weight="1"
                />
        </LinearLayout>
    </ScrollView>
</layout>