<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        tools:context=".LoginActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_50" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_0"
            android:layout_weight="1"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/sb_size_24"
                android:paddingRight="@dimen/sb_size_24"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/sb_size_48"
                    android:layout_height="@dimen/sb_size_48"
                    android:layout_marginTop="@dimen/sb_size_56"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/logo_sendbird" />

                <TextView
                    android:layout_marginTop="@dimen/sb_size_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sb_text_size_24"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/onlight_01"
                    android:text="@string/text_title_login_activity"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_56"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/sb_size_16"
                    android:paddingRight="@dimen/sb_size_16"
                    android:layout_marginTop="@dimen/sb_size_40"
                    app:boxStrokeColor="@color/primary_300"
                    android:background="@drawable/selector_edittext_background_with_focusable"
                    app:hintTextColor="@color/primary_300"
                    app:boxBackgroundMode="outline"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_hint_user_id"
                        android:maxLines="1"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/shape_rect_transparent"
                        android:textSize="@dimen/sb_text_size_16"
                        android:textCursorDrawable="@drawable/shape_cursor_drawable"
                        android:imeOptions="actionNext"
                        android:inputType="text">
                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_56"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/sb_size_16"
                    android:paddingRight="@dimen/sb_size_16"
                    app:hintTextColor="@color/primary_300"
                    app:boxBackgroundMode="outline"
                    android:background="@drawable/selector_edittext_background_with_focusable"
                    android:layout_marginTop="@dimen/sb_size_16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_rect_transparent"
                        android:maxLines="1"
                        android:textSize="@dimen/sb_text_size_16"
                        android:hint="@string/text_hint_nickname"
                        android:textCursorDrawable="@drawable/shape_cursor_drawable"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSignIn"
                    android:layout_marginTop="@dimen/sb_size_32"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_text_size_48"
                    android:textSize="@dimen/sb_text_size_14"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/ondark_01"
                    android:lineSpacingExtra="@dimen/sb_text_size_2"
                    android:background="@drawable/selector_button_primary_300"
                    android:text="@string/text_sign_in"/>

                <TextView
                    android:id="@+id/tvVersionInfo"
                    android:layout_height="@dimen/sb_size_0"
                    android:layout_width="match_parent"
                    android:gravity="center|bottom"
                    android:textSize="@dimen/sb_text_size_12"
                    android:layout_marginTop="@dimen/sb_size_10"
                    android:layout_marginBottom="@dimen/sb_size_10"
                    android:textColor="@color/onlight_02"
                    android:layout_weight="1"
                    />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>

