<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <import type="com.sendbird.uikit_messaging_android.utils.PreferenceUtils"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{PreferenceUtils.isUsingDarkTheme() ? @color/background_600 : @color/background_100}"
        tools:context="com.sendbird.uikit_messaging_android.openchannel.community.CreateCommunityActivity">

        <com.sendbird.uikit.widgets.AppBarView
            android:id="@+id/tbCreateCommunity"
            android:layout_width="@dimen/sb_size_0"
            android:layout_height="wrap_content"
            app:sb_appbar_title="@string/text_create_community"
            app:sb_appbar_right_button_text="@string/text_header_create_button"
            app:sb_appbar_left_button_icon="@drawable/icon_arrow_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ivChannelCover"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivChannelCover"
            android:layout_width="@dimen/sb_size_72"
            android:layout_height="@dimen/sb_size_72"
            android:background="@{PreferenceUtils.isUsingDarkTheme() ? @drawable/shape_image_view_background_dark : @drawable/shape_image_view_background_light}"
            android:layout_marginLeft="@dimen/sb_size_16"
            android:layout_marginStart="@dimen/sb_size_16"
            android:layout_marginTop="@dimen/sb_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbCreateCommunity"
            app:layout_constraintEnd_toStartOf="@id/titleLayout"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCameraIcon"
            android:layout_width="@dimen/sb_size_32"
            android:layout_height="@dimen/sb_size_32"
            app:layout_constraintTop_toTopOf="@id/ivChannelCover"
            app:layout_constraintBottom_toBottomOf="@id/ivChannelCover"
            app:layout_constraintStart_toStartOf="@id/ivChannelCover"
            app:layout_constraintEnd_toEndOf="@id/ivChannelCover"/>
        
        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="@dimen/sb_size_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sb_size_16"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/sb_size_13"
            android:paddingBottom="@dimen/sb_size_13"
            android:background="@{PreferenceUtils.isUsingDarkTheme() ? @drawable/shape_edit_text_background_dark : @drawable/shape_edit_text_background_light}"
            app:layout_constraintTop_toTopOf="@id/ivChannelCover"
            app:layout_constraintBottom_toBottomOf="@id/ivChannelCover"
            app:layout_constraintStart_toEndOf="@id/ivChannelCover"
            app:layout_constraintEnd_toEndOf="parent">
            
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_channel_name_hint"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionDone"
                android:layout_weight="1"
                android:textCursorDrawable="@drawable/shape_cursor_drawable_bg_300"
                android:textAppearance="@style/SendbirdSubtitle1OnDark01"
                android:background="@null"
                android:textColor="@{PreferenceUtils.isUsingDarkTheme() ? @color/ondark_01 : @color/onlight_01}"
                android:textColorHint="@{PreferenceUtils.isUsingDarkTheme() ? @color/ondark_03 : @color/onlight_03}"
                />
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearButton"
                android:layout_width="@dimen/sb_size_24"
                android:layout_height="@dimen/sb_size_24"
                android:layout_marginLeft="5dp"
                android:background="@{PreferenceUtils.isUsingDarkTheme() ? @drawable/selector_edit_text_clear_button_dark : @drawable/selector_edit_text_clear_button_light}"
                android:layout_gravity="end|center_vertical"
                android:visibility="gone"
                />
            
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>